[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/shared/gui/LabelSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/shared/gui/ActionKey.gd" type="Script" id=2]
[ext_resource path="res://addons/input/InputKey.gd" type="Script" id=3]

[node name="ActionKey" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelSprite" parent="." instance=ExtResource( 1 )]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="InputKey" type="Node" parent="."]
script = ExtResource( 3 )
