[gd_scene load_steps=5 format=3 uid="uid://bbg7xcfxcea63"]

[ext_resource type="PackedScene" path="res://src/shared/gui/TextureLabel.tscn" id="1"]
[ext_resource type="Script" path="res://src/skills/SkillSelectItem.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://byhlda6waa10x" path="res://src/shared/gui/CircleTimer.tscn" id="3"]
[ext_resource type="Script" path="res://addons/input/InputKey.gd" id="4"]

[node name="SkillSelectItem" type="Node2D"]
script = ExtResource("2")

[node name="TextureLabel" parent="." instance=ExtResource("1")]
anchors_preset = 15
use_top_left = true

[node name="CircleTimer" parent="TextureLabel" instance=ExtResource("3")]
layout_mode = 2
time = 5.0

[node name="InputSprite" type="Node" parent="."]
script = ExtResource("4")

[connection signal="input_text" from="InputSprite" to="TextureLabel" method="set_label"]
[connection signal="input_texture" from="InputSprite" to="TextureLabel" method="set_label"]
